PayRollSystem/src/objects/Firm_Owner__c.object
<CustomObject>
    <description>Object holds ownership of the company object.</description>
    <fields>
        <fullName>First_Name__c</fullName>
        <description>Holds the first name of the record.</description>
        <label>First Name</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Full_Name__c</fullName>
        <description>Holds the full name of the owner.</description>
        <formula>First_Name__c  &amp; &quot; &quot;  &amp;  Last_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <description>Holds Last name of the record of the owner.</description>
        <label>Last Name</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <label>Firm Owner</label>
    <nameField>
        <displayFormat>O-{000}</displayFormat>
        <label>Firm Owner Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Firm Owners</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>